--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,7 @@ packaging==24.0
 pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.4
+patsy==0.5.6
 pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.0
@@ -104,8 +105,10 @@ six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
+statsmodels==0.14.2
 terminado==0.18.1
 tinycss2==1.2.1
+tinysegmenter==0.3
 tldextract==5.1.2
 tornado==6.4
 tqdm==4.66.2
